--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">AAWode</string>
+    <string name="app_name">AAA我的测试</string>
     <string name="hide_danmaku">hide</string>
     <string name="show_danmaku">show</string>
     <string name="pause_danmaku">pause</string>
